fieldx/tests/uncompilable_serde/1.77/serialize_off.stderr
error[E0425]: cannot find value `foo` in this scope
  --> tests/uncompilable_serde/serialize_off.rs:15:40
   |
15 |     let _json = serde_json::to_string(&foo);
   |                                        ^^^ not found in this scope

warning: unused import: `Serialize`
 --> tests/uncompilable_serde/serialize_off.rs:5:26
  |
5 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
